Fixes file paths

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Users/skipperthurman/bootcamp/module-5-challenge/module-5-challenge/CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css"/>
     <title>Work Day Scheduler</title>
     <script type = "text/JavaScript" src = " https://MomentJS.com/downloads/moment.js"></script>
   </head>
@@ -141,7 +141,7 @@
                       </div>
                       </div>
 
-    <script src="/Users/skipperthurman/bootcamp/module-5-challenge/module-5-challenge/JavaScript/javascript.js"></script>
+    <script src="./JavaScript/javascript.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
